// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileHeaderCard should render UI correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col"
      >
        <section>
          <div
            class="flex flex-col flex flex-col"
          >
            <section
              class="switchFilter"
            >
              <section>
                <div
                  class="rich-dropdown"
                >
                  <div
                    class="flex flex-col switch-filter default"
                    tabindex="1"
                  >
                    <div>
                      <div
                        class="flex flex-row px-4 py-2 items-center w-auto h-[105px]"
                      >
                        <div
                          class="flex flex-col grow"
                        >
                          <p
                            class="body-2 font-light"
                          >
                            My Profile
                          </p>
                          <h3
                            class="title-3 font-bold p-1"
                          >
                            JENNIE RAMAGE
                          </h3>
                          <p
                            class="body-1 font-light"
                          >
                            DOB: 01/27/1931
                          </p>
                        </div>
                        <img
                          alt="switch"
                          class="size-5 head-icon"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                        ,
                      </div>
                    </div>
                  </div>
                  <div
                    class="card-elevated switch-filter absolute-dropdown min-w-[100%] default"
                  >
                    <div>
                      <div>
                        <div
                          class="flex flex-row h-[72px] p-4 items-center divider-bottom"
                        >
                          <h3
                            class="title-3 grow"
                          >
                            Switch to...
                          </h3>
                          <img
                            alt="switch"
                            class="size-5"
                            data-nimg="1"
                            decoding="async"
                            height="40"
                            loading="lazy"
                            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                            style="color: transparent;"
                            width="40"
                          />
                        </div>
                      </div>
                      <ul
                        class="max-h-[420px] min-w-[100%] overflow-auto"
                      >
                        <li>
                          <div
                            class="flex flex-row p-4   item"
                            tabindex="1"
                          >
                            <div
                              class=""
                            />
                            <div
                              class="card-elevated p-4 selected app-base-font-color min-w-[100%]"
                            >
                              <div
                                class="flex flex-col"
                              >
                                <div
                                  class="flex flex-col justify-between"
                                >
                                  <p
                                    class="body-2"
                                  >
                                    My Profile
                                  </p>
                                  <div
                                    class="flex flex-row justify-between"
                                  >
                                    <h3
                                      class="title-3 font-bold text-xl py-1"
                                    >
                                      JENNIE RAMAGE
                                    </h3>
                                    <img
                                      alt="selected"
                                      class="size-5 m-[2px]"
                                      data-nimg="1"
                                      decoding="async"
                                      height="40"
                                      loading="lazy"
                                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                      style="color: transparent;"
                                      width="40"
                                    />
                                  </div>
                                  <p
                                    class="body-1 text-base"
                                  >
                                    DOB: 01/27/1931
                                  </p>
                                </div>
                              </div>
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            class="flex flex-row p-4   item"
                            tabindex="1"
                          >
                            <div
                              class=""
                            />
                            <div
                              class="card-elevated p-4  app-base-font-color min-w-[100%]"
                            >
                              <div
                                class="flex flex-col"
                              >
                                <div
                                  class="flex flex-col justify-between"
                                >
                                  <p
                                    class="body-2"
                                  >
                                    view as Personal Representative 
                                  </p>
                                  <div
                                    class="flex flex-row justify-between"
                                  >
                                    <h3
                                      class="title-3 font-bold text-xl py-1 primary-color"
                                    >
                                      Robert Hall
                                    </h3>
                                    <img
                                      alt="selected"
                                      class="size-5 m-[2px]"
                                      data-nimg="1"
                                      decoding="async"
                                      height="40"
                                      loading="lazy"
                                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                      style="color: transparent;"
                                      width="40"
                                    />
                                  </div>
                                  <p
                                    class="body-1 text-base"
                                  >
                                    DOB: 01/01/1943
                                  </p>
                                </div>
                              </div>
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            class="flex flex-row p-4   item"
                            tabindex="1"
                          >
                            <div
                              class=""
                            />
                            <div
                              class="card-elevated p-4  app-base-font-color min-w-[100%]"
                            >
                              <div
                                class="flex flex-col"
                              >
                                <div
                                  class="flex flex-col justify-between"
                                >
                                  <p
                                    class="body-2"
                                  >
                                    view as Authorized User 
                                  </p>
                                  <div
                                    class="flex flex-row justify-between"
                                  >
                                    <h3
                                      class="title-3 font-bold text-xl py-1 primary-color"
                                    >
                                      Ellie Williams
                                    </h3>
                                    <img
                                      alt="selected"
                                      class="size-5 m-[2px]"
                                      data-nimg="1"
                                      decoding="async"
                                      height="40"
                                      loading="lazy"
                                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                      style="color: transparent;"
                                      width="40"
                                    />
                                  </div>
                                  <p
                                    class="body-1 text-base"
                                  >
                                    DOB: 01/01/1943
                                  </p>
                                </div>
                              </div>
                            </div>
                          </div>
                        </li>
                      </ul>
                      <div />
                    </div>
                  </div>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                />
                <div
                  class="flex flex-col"
                >
                  <a
                    style="display: block;"
                    tabindex="-1"
                  >
                    <button
                      class="flex flex-row link-container font-bold !flex primary-color underline underline-offset-3 title-3 "
                      style="max-width: max-content; height: auto; display: block;"
                      tabindex="0"
                    >
                      <p
                        class="link undefined"
                        style="display: block;"
                      >
                        All Profile Settings
                      </p>
                      <p
                        class="ml-1"
                        style="display: block;"
                      >
                        <img
                          alt="link"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </p>
                    </button>
                  </a>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                  <a
                    style="display: block;"
                    tabindex="-1"
                  >
                    <button
                      class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline mt-4"
                      style="max-width: max-content; height: auto; display: block;"
                      tabindex="0"
                    >
                      <p
                        class="link undefined"
                        style="display: block;"
                      >
                        Communication Settings
                      </p>
                    </button>
                  </a>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                  <a
                    style="display: block;"
                    tabindex="-1"
                  >
                    <button
                      class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline"
                      style="max-width: max-content; height: auto; display: block;"
                      tabindex="0"
                    >
                      <p
                        class="link undefined"
                        style="display: block;"
                      >
                        Security Settings
                      </p>
                    </button>
                  </a>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                  />
                </div>
              </section>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
            </section>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col"
    >
      <section>
        <div
          class="flex flex-col flex flex-col"
        >
          <section
            class="switchFilter"
          >
            <section>
              <div
                class="rich-dropdown"
              >
                <div
                  class="flex flex-col switch-filter default"
                  tabindex="1"
                >
                  <div>
                    <div
                      class="flex flex-row px-4 py-2 items-center w-auto h-[105px]"
                    >
                      <div
                        class="flex flex-col grow"
                      >
                        <p
                          class="body-2 font-light"
                        >
                          My Profile
                        </p>
                        <h3
                          class="title-3 font-bold p-1"
                        >
                          JENNIE RAMAGE
                        </h3>
                        <p
                          class="body-1 font-light"
                        >
                          DOB: 01/27/1931
                        </p>
                      </div>
                      <img
                        alt="switch"
                        class="size-5 head-icon"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      ,
                    </div>
                  </div>
                </div>
                <div
                  class="card-elevated switch-filter absolute-dropdown min-w-[100%] default"
                >
                  <div>
                    <div>
                      <div
                        class="flex flex-row h-[72px] p-4 items-center divider-bottom"
                      >
                        <h3
                          class="title-3 grow"
                        >
                          Switch to...
                        </h3>
                        <img
                          alt="switch"
                          class="size-5"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                    </div>
                    <ul
                      class="max-h-[420px] min-w-[100%] overflow-auto"
                    >
                      <li>
                        <div
                          class="flex flex-row p-4   item"
                          tabindex="1"
                        >
                          <div
                            class=""
                          />
                          <div
                            class="card-elevated p-4 selected app-base-font-color min-w-[100%]"
                          >
                            <div
                              class="flex flex-col"
                            >
                              <div
                                class="flex flex-col justify-between"
                              >
                                <p
                                  class="body-2"
                                >
                                  My Profile
                                </p>
                                <div
                                  class="flex flex-row justify-between"
                                >
                                  <h3
                                    class="title-3 font-bold text-xl py-1"
                                  >
                                    JENNIE RAMAGE
                                  </h3>
                                  <img
                                    alt="selected"
                                    class="size-5 m-[2px]"
                                    data-nimg="1"
                                    decoding="async"
                                    height="40"
                                    loading="lazy"
                                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                    style="color: transparent;"
                                    width="40"
                                  />
                                </div>
                                <p
                                  class="body-1 text-base"
                                >
                                  DOB: 01/27/1931
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          class="flex flex-row p-4   item"
                          tabindex="1"
                        >
                          <div
                            class=""
                          />
                          <div
                            class="card-elevated p-4  app-base-font-color min-w-[100%]"
                          >
                            <div
                              class="flex flex-col"
                            >
                              <div
                                class="flex flex-col justify-between"
                              >
                                <p
                                  class="body-2"
                                >
                                  view as Personal Representative 
                                </p>
                                <div
                                  class="flex flex-row justify-between"
                                >
                                  <h3
                                    class="title-3 font-bold text-xl py-1 primary-color"
                                  >
                                    Robert Hall
                                  </h3>
                                  <img
                                    alt="selected"
                                    class="size-5 m-[2px]"
                                    data-nimg="1"
                                    decoding="async"
                                    height="40"
                                    loading="lazy"
                                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                    style="color: transparent;"
                                    width="40"
                                  />
                                </div>
                                <p
                                  class="body-1 text-base"
                                >
                                  DOB: 01/01/1943
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          class="flex flex-row p-4   item"
                          tabindex="1"
                        >
                          <div
                            class=""
                          />
                          <div
                            class="card-elevated p-4  app-base-font-color min-w-[100%]"
                          >
                            <div
                              class="flex flex-col"
                            >
                              <div
                                class="flex flex-col justify-between"
                              >
                                <p
                                  class="body-2"
                                >
                                  view as Authorized User 
                                </p>
                                <div
                                  class="flex flex-row justify-between"
                                >
                                  <h3
                                    class="title-3 font-bold text-xl py-1 primary-color"
                                  >
                                    Ellie Williams
                                  </h3>
                                  <img
                                    alt="selected"
                                    class="size-5 m-[2px]"
                                    data-nimg="1"
                                    decoding="async"
                                    height="40"
                                    loading="lazy"
                                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                    style="color: transparent;"
                                    width="40"
                                  />
                                </div>
                                <p
                                  class="body-1 text-base"
                                >
                                  DOB: 01/01/1943
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div />
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
              />
              <div
                class="flex flex-col"
              >
                <a
                  style="display: block;"
                  tabindex="-1"
                >
                  <button
                    class="flex flex-row link-container font-bold !flex primary-color underline underline-offset-3 title-3 "
                    style="max-width: max-content; height: auto; display: block;"
                    tabindex="0"
                  >
                    <p
                      class="link undefined"
                      style="display: block;"
                    >
                      All Profile Settings
                    </p>
                    <p
                      class="ml-1"
                      style="display: block;"
                    >
                      <img
                        alt="link"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </p>
                  </button>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class=""
                  style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                />
                <a
                  style="display: block;"
                  tabindex="-1"
                >
                  <button
                    class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline mt-4"
                    style="max-width: max-content; height: auto; display: block;"
                    tabindex="0"
                  >
                    <p
                      class="link undefined"
                      style="display: block;"
                    >
                      Communication Settings
                    </p>
                  </button>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <a
                  style="display: block;"
                  tabindex="-1"
                >
                  <button
                    class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline"
                    style="max-width: max-content; height: auto; display: block;"
                    tabindex="0"
                  >
                    <p
                      class="link undefined"
                      style="display: block;"
                    >
                      Security Settings
                    </p>
                  </button>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
              </div>
            </section>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
          </section>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProfileHeaderCard should render UI correctly 2`] = `
<body>
  <div>
    <div
      class="flex flex-col"
    >
      <section>
        <div
          class="flex flex-col flex flex-col"
        >
          <section
            class="switchFilter"
          >
            <section>
              <div
                class="rich-dropdown"
              >
                <div
                  class="flex flex-col switch-filter default"
                  tabindex="1"
                >
                  <div>
                    <div
                      class="flex flex-row px-4 py-2 items-center w-auto h-[105px]"
                    >
                      <div
                        class="flex flex-col grow"
                      >
                        <p
                          class="body-2 font-light"
                        >
                          My Profile
                        </p>
                        <h3
                          class="title-3 font-bold p-1"
                        >
                          JENNIE RAMAGE
                        </h3>
                        <p
                          class="body-1 font-light"
                        >
                          DOB: 01/27/1931
                        </p>
                      </div>
                      <img
                        alt="switch"
                        class="size-5 head-icon"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      ,
                    </div>
                  </div>
                </div>
                <div
                  class="card-elevated switch-filter absolute-dropdown min-w-[100%] default"
                >
                  <div>
                    <div>
                      <div
                        class="flex flex-row h-[72px] p-4 items-center divider-bottom"
                      >
                        <h3
                          class="title-3 grow"
                        >
                          Switch to...
                        </h3>
                        <img
                          alt="switch"
                          class="size-5"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                    </div>
                    <ul
                      class="max-h-[420px] min-w-[100%] overflow-auto"
                    >
                      <li>
                        <div
                          class="flex flex-row p-4   item"
                          tabindex="1"
                        >
                          <div
                            class=""
                          />
                          <div
                            class="card-elevated p-4 selected app-base-font-color min-w-[100%]"
                          >
                            <div
                              class="flex flex-col"
                            >
                              <div
                                class="flex flex-col justify-between"
                              >
                                <p
                                  class="body-2"
                                >
                                  My Profile
                                </p>
                                <div
                                  class="flex flex-row justify-between"
                                >
                                  <h3
                                    class="title-3 font-bold text-xl py-1"
                                  >
                                    JENNIE RAMAGE
                                  </h3>
                                  <img
                                    alt="selected"
                                    class="size-5 m-[2px]"
                                    data-nimg="1"
                                    decoding="async"
                                    height="40"
                                    loading="lazy"
                                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                    style="color: transparent;"
                                    width="40"
                                  />
                                </div>
                                <p
                                  class="body-1 text-base"
                                >
                                  DOB: 01/27/1931
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          class="flex flex-row p-4   item"
                          tabindex="1"
                        >
                          <div
                            class=""
                          />
                          <div
                            class="card-elevated p-4  app-base-font-color min-w-[100%]"
                          >
                            <div
                              class="flex flex-col"
                            >
                              <div
                                class="flex flex-col justify-between"
                              >
                                <p
                                  class="body-2"
                                >
                                  view as Personal Representative 
                                </p>
                                <div
                                  class="flex flex-row justify-between"
                                >
                                  <h3
                                    class="title-3 font-bold text-xl py-1 primary-color"
                                  >
                                    Robert Hall
                                  </h3>
                                  <img
                                    alt="selected"
                                    class="size-5 m-[2px]"
                                    data-nimg="1"
                                    decoding="async"
                                    height="40"
                                    loading="lazy"
                                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                    style="color: transparent;"
                                    width="40"
                                  />
                                </div>
                                <p
                                  class="body-1 text-base"
                                >
                                  DOB: 01/01/1943
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          class="flex flex-row p-4   item"
                          tabindex="1"
                        >
                          <div
                            class=""
                          />
                          <div
                            class="card-elevated p-4  app-base-font-color min-w-[100%]"
                          >
                            <div
                              class="flex flex-col"
                            >
                              <div
                                class="flex flex-col justify-between"
                              >
                                <p
                                  class="body-2"
                                >
                                  view as Authorized User 
                                </p>
                                <div
                                  class="flex flex-row justify-between"
                                >
                                  <h3
                                    class="title-3 font-bold text-xl py-1 primary-color"
                                  >
                                    Ellie Williams
                                  </h3>
                                  <img
                                    alt="selected"
                                    class="size-5 m-[2px]"
                                    data-nimg="1"
                                    decoding="async"
                                    height="40"
                                    loading="lazy"
                                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                                    style="color: transparent;"
                                    width="40"
                                  />
                                </div>
                                <p
                                  class="body-1 text-base"
                                >
                                  DOB: 01/01/1943
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                    <div />
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
              />
              <div
                class="flex flex-col"
              >
                <a
                  style="display: block;"
                  tabindex="-1"
                >
                  <button
                    class="flex flex-row link-container font-bold !flex primary-color underline underline-offset-3 title-3 "
                    style="max-width: max-content; height: auto; display: block;"
                    tabindex="0"
                  >
                    <p
                      class="link undefined"
                      style="display: block;"
                    >
                      All Profile Settings
                    </p>
                    <p
                      class="ml-1"
                      style="display: block;"
                    >
                      <img
                        alt="link"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </p>
                  </button>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <div
                  class=""
                  style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                />
                <a
                  style="display: block;"
                  tabindex="-1"
                >
                  <button
                    class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline mt-4"
                    style="max-width: max-content; height: auto; display: block;"
                    tabindex="0"
                  >
                    <p
                      class="link undefined"
                      style="display: block;"
                    >
                      Communication Settings
                    </p>
                  </button>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
                <a
                  style="display: block;"
                  tabindex="-1"
                >
                  <button
                    class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline"
                    style="max-width: max-content; height: auto; display: block;"
                    tabindex="0"
                  >
                    <p
                      class="link undefined"
                      style="display: block;"
                    >
                      Security Settings
                    </p>
                  </button>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                />
              </div>
            </section>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
          </section>
        </div>
      </section>
    </div>
  </div>
</body>
`;
